# ci_testing

./: README.md  paths.py  pyproject.toml  run.py  tasks.py  timestamp.txt
.github/workflows/: python-ci.yml  update-snapshots.yml
src/: main.py
tests/snapshots/: test_snapshots.py
tests/snapshots/Cases/Case01/ExpectedOutputs/: df.csv
